--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ImportarCargaDTA.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ImportarCargaDTA.cshtml
@@ -162,7 +162,7 @@
                     </div>
                     <div class="col-24 col-sm-12 col-md-8 col-lg-7 col-xl-6">
                         <div class="form-group">
-                            <label for="valorNfeVariosContainer" class="form-label">@T("Carga")</label>
+                            <label for="valorNfeVariosContainer" class="form-label">@T("Valor da Carga")</label>
                             <input type="text" class="form-control" id="valorNfeVariosContainer" name="ValorNfe" placeholder="R$ 9.999,99" maxlength="13" />
                         </div>
                     </div>
