--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/Editar.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/Editar.cshtml
@@ -13,14 +13,14 @@
 </div>
 <div class="form-group col-md-24">
     <label>@T("Url Importação")</label>
-    <input type="text" class="form-control" name="UrlImportacao" id="UrlImportacao" placeholder="@T("Url Importação DTA")" value="@Model.UrlImportacaoDTA">
+    <input type="text" class="form-control" name="UrlImportacaoDTA" id="UrlImportacaoDTA" placeholder="@T("Url Importação DTA")" value="@Model.UrlImportacaoDTA">
 </div>
 <div class="form-group col-md-24">
     <label>@T("View")</label>
     <select name="NomeView" class="form-control">
         <option value="EscolherTipo" @(!string.IsNullOrEmpty(Model.NomeView) && Model.NomeView.Equals("EscolherTipo") ? "selected" : "")>@T("EscolherTipo")</option>
-        <option value="Importar" @(!string.IsNullOrEmpty(Model.NomeView) && Model.NomeView.Equals("Importacao") ? "selected" : "")>@T("Importação")</option>
-        <option value="Importar" @(!string.IsNullOrEmpty(Model.NomeView) && Model.NomeView.Equals("ImportacaoDTA") ? "selected" : "")>@T("Importação DTA")</option>
-        <option value="Exportar" @(!string.IsNullOrEmpty(Model.NomeView) && Model.NomeView.Equals("Exportacao") ? "selected" : "")>@T("Exportação")</option>
+        <option value="Importar" @(!string.IsNullOrEmpty(Model.NomeView) && Model.NomeView.Equals("Importar") ? "selected" : "")>@T("Importação")</option>
+        <option value="ImportarDTA" @(!string.IsNullOrEmpty(Model.NomeView) && Model.NomeView.Equals("ImportarDTA") ? "selected" : "")>@T("Importação DTA")</option>
+        <option value="Exportar" @(!string.IsNullOrEmpty(Model.NomeView) && Model.NomeView.Equals("Exportar") ? "selected" : "")>@T("Exportação")</option>
     </select>
 </div>
