--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ImportarCarga.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ImportarCarga.cshtml
@@ -6,8 +6,6 @@
     var hora = DateTime.Now.Hour;
     var minuto = DateTime.Now.Minute;
 }
-
-
 <div class="form-section" id="divCarga">
     <h3 class="form-section__title">@T("Informações de Carga")</h3>
     <p class="text-center">@T("Utilize os campos abaixo para registrar os containers. Indique a quantidade de containers por NF-e.")</p>
@@ -45,25 +43,25 @@
         <div class="row justify-content-center" id="divContainerNf">
             <div class="col-24 col-sm-12 col-xl-6">
                 <div class="form-group">
-                    <label for="dataEntrega" class="form-label">Data e hora da Entrega</label>
+                    <label for="dataEntrega" class="form-label">@T("Data e hora da Entrega")</label>
                     <input type="datetime-local" min="@DateTime.Now.ToString("yyyy-MM-dd")T00:00" id="dataEntrega" name="DataEntrega" class="form-control">
                 </div>
             </div>
             <div class="col-24 col-sm-12 col-xl-6" id="divNfContainerNf">
                 <div class="form-group">
-                    <label for="numeroNfe" class="form-label">Número da NF-e</label>
+                    <label for="numeroNfe" class="form-label">@T("Número da NF-e")</label>
                     <input type="text" class="form-control" id="numeroNfe" name="NumeroNfe" placeholder="9999999" maxlength="7">
                 </div>
             </div>
             <div class="col-24 col-sm-12 col-xl-6">
                 <div class="form-group">
-                    <label for="valorNfe" class="form-label">Valor da NF-e</label>
+                    <label for="valorNfe" class="form-label">@T("Valor da NF-e")</label>
                     <input type="text" class="form-control" id="valorNfe" name="ValorNfeFormatado"  placeholder="R$ 9.999,99" maxlength="13" />
                 </div>
             </div>
             <div class="col-24 col-sm-12 col-xl-6">
                 <div class="form-group">
-                    <label for="container" class="form-label" id="lblContainer">Nº do Container 01</label>
+                    <label for="container" class="form-label" id="lblContainer">@T("Nº do Container 01")</label>
                     <input type="text" class="form-control" id="container" name="Container" placeholder="99.999.999" maxlength="10" />
                 </div>
             </div>
@@ -71,7 +69,7 @@
                 <div class="form-group">
                     <label for="" class="form-label">
                         <span class="icon icon-paperclip"></span>
-                        Anexar NF-e
+                        @T("Anexar NF-e")
                     </label>
                     <div id="divArquivosNfContainerNf" style="border:2px dashed #dee2e6;border-radius:10px;font-size:17px;padding:20px;display:none;"></div>
                     <div id="arquivoNfContainerNf" class="dropzone">
@@ -85,7 +83,7 @@
             </div>
             <div class="col-24 col-md-12 col-lg-15 col-xl-12">
                 <div class="form-group">
-                    <label for="comentario" class="form-label">Comentários / Referência interna</label>
+                    <label for="comentario" class="form-label">@T("Comentários / Referência interna")</label>
                     <textarea class="form-control" rows="4" id="comentario" name="Comentario" maxlength="300"></textarea>
                     <span class="form-counter jqComentario">0 de 300</span>
                 </div>
@@ -94,11 +92,11 @@
                 <div class="form-group">
                     <a href="javascript:void(0)" class="btn btn-red btn-icon btn-block mb-4 btnCancelarCargaJQ" style="margin:0px!important;">
                         <span class="icon icon-chevron-left"></span>
-                        Voltar
+                        @T("Voltar")
                     </a>
                     <a href="javascript:void(0)" class="btn btn-darkgray btn-icon btn-block mb-4 btnSalvarCargaJQ">
                         <span class="icon icon-plus"></span>
-                        Registrar Containers
+                        @T("Registrar Containers")
                     </a>
                 </div>
             </div>
@@ -133,20 +131,18 @@
             </div>
 
             <div class="nfe-list listVariasNfJQ">
-
             </div>
 
             <div class="text-center mt-5">
                 <a href="javascript:void(0)" class="btn btn-red btn-icon btn-lg btnCancelarCargaVariasNfJQ" style="width: 279px;">
                     <span class="icon icon-chevron-left"></span>
-                    Voltar
+                    @T("Voltar")
                 </a>
                 <a href="javascript:void(0)" class="btn btn-darkgray btn-icon btn-lg btnSalvarCargaVariasNfJQ">
                     <span class="icon icon-plus"></span>
-                    Registrar Containers
+                    @T("Registrar Containers")
                 </a>
             </div>
-
         </div>
     </form>
 
@@ -173,7 +169,7 @@
                         <div class="form-group">
                             <label for="" class="form-label">
                                 <span class="icon icon-paperclip"></span>
-                                Anexar NF-e
+                                @T("Anexar NF-e")
                             </label>
                             <div id="divArquivosNfVariosContainerNf" style="border:2px dashed #dee2e6;border-radius:10px;font-size:17px;padding:20px;display:none;"></div>
                             <div id="arquivoNfVariosContainerNf" class="dropzone">
@@ -193,11 +189,11 @@
             <div class="text-center mt-5">
                 <a href="javascript:void(0)" class="btn btn-red btn-icon btn-lg btnCancelarCargaVariosContainerJQ" style="width: 279px;">
                     <span class="icon icon-chevron-left"></span>
-                    Voltar
+                    @T("Voltar")
                 </a>
                 <a href="javascript:void(0)" class="btn btn-darkgray btn-icon btn-lg btnSalvarCargaVariosContainerJQ">
                     <span class="icon icon-plus"></span>
-                    Registrar Containers
+                    @T("Registrar Containers")
                 </a>
             </div>
         </div>
@@ -208,11 +204,8 @@
     <form class="form">
         <div class="form-section" id="divRegistrosCargas">
             <h3 class="form-section__title">Containers Registrados</h3>
-
             <input type="hidden" name="LinhaExcluir" id="LinhaExcluir" value="" />
             <input type="hidden" name="CodigoExcluir" id="CodigoExcluir" value="" />
-
-
             <div class="table-responsive" id="divRegistrosImportarCargas">
                 <table class="table">
                     <thead>
@@ -234,7 +227,7 @@
             <div class="form-group text-center">
                 <a href="javascript:void(0)" class="btn btn-red btn-lg btn-icon btnAgendarImportarJQ">
                     <span class="icon icon-truck"></span>
-                    Agendar Entrega
+                    @T("Agendar Entrega")
                 </a>
             </div>
         </div>
