--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/PopupConfirmacao.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/PopupConfirmacao.cshtml
@@ -1,10 +1,19 @@
-﻿@model MLAgendamentoIntermodalImportacao
-
-<div class="box-agendamento box-agendamento--success sucessoJQ">
-    <h2 class="success-title">@T("Envio efetuado com sucesso!")</h2>
-    <p>
-        Quisque a eros quam. Pellentesque egestas finibus porttitor.<br>
-        Praesent fermentum lorem nec euismod euismod. Vivamus lacinia ex at arcu pulvinar, non tincidunt velit viverra.
-    </p>
-    <a href="javascript:void(0)" class="btn btn-red btn-lg reloadJQ">@T("Fazer um novo Agendamento")</a>
+﻿<div class="modal modal-confirmacao fade" id="modalPopupConfirmacao" tabindex="-1" aria-labelledby="modalPopupConfirmacao" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="modalConfirmacao"><strong>@T("Envio de solicitação")</strong></h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <strong class="mensagemModal">@T("Deseja realmente enviar a solicitação?")</strong>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-success btnSimPopupConfirmacaoJQ">@T("Sim")</button>
+                <button type="button" class="btn btn-delete btnNaoPopupConfirmacaoJQ" data-dismiss="modal">@T("Não")</button>
+            </div>
+        </div>
+    </div>
 </div>
