--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptExportar.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptExportar.cshtml
@@ -91,7 +91,8 @@
                     Complemento: $("#Complemento").val(),
                     Bairro: $("#Bairro").val(),
                     Cidade: $("#Cidade").val(),
-                    Estado: $("#Estado").val()
+                    Estado: $("#Estado").val(),
+                    Tipo: $("#Tipo").val()
                 },
                 success: function (data) {
                     if (data.success == true) {
