--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptExportarCarga.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptExportarCarga.cshtml
@@ -177,6 +177,15 @@
     });
 
     $(".btnAgendarJQ").on("click", function () {
+        $('#modalPopupConfirmacao').modal('show');
+    });
+
+    $(".btnSimPopupConfirmacaoJQ").on("click", function (e) {
+        e.preventDefault();
+        $('#modalPopupConfirmacao').modal('show');
+        $(".btnSimPopupConfirmacaoJQ").prop('disabled', true);
+        $(".mensagemModal").text("Aguarde, estamos enviando a sua solicitação!");
+
           $.ajax({
             type: "POST",
             url: "/cms/@portal.Diretorio/AgendamentoIntermodal/Integrar",
@@ -193,12 +202,50 @@
                   Bairro: $("#Bairro").val(),
                   Cidade: $("#Cidade").val(),
                   Estado: $("#Estado").val(),
-                  Html: $("#divRegistrosCargas").html()
+                  Html: $("#divRegistrosCargas").html(),
+                  Tipo: $("#Tipo").val()
               },
             success: function (data) {
                 if (data.success == true) {
                     $(".agendamentoJQ").hide();
                     $(".sucessoJQ").fadeIn("slide");
+                    $('#modalPopupConfirmacao').modal('hide');
+                }
+            },
+            error: function (data) {
+
+            }
+        });
+    });
+
+    $(".btnSimPopupConfirmacaoJQ").on("click", function () {
+        e.preventDefault();
+        $('#modalPopupConfirmacao').modal('show');
+
+          $.ajax({
+            type: "POST",
+            url: "/cms/@portal.Diretorio/AgendamentoIntermodal/Integrar",
+              data: {
+                  Codigo: $("#CodigoExportar").val(),
+                  Nome: $("#Nome").val(),
+                  Email: $("#Email").val(),
+                  PropostaComercial: $("#PropostaComercial").val(),
+                  NumeroBooking: $("#NumeroBooking").val(),
+                  CEP: $("#CEP").val(),
+                  CNPJ: $("#CNPJ").val(),
+                  Endereco: $("#Endereco").val(),
+                  Complemento: $("#Complemento").val(),
+                  Bairro: $("#Bairro").val(),
+                  Cidade: $("#Cidade").val(),
+                  Estado: $("#Estado").val(),
+                  Html: $("#divRegistrosCargas").html(),
+                  Tipo: $("#Tipo").val()
+              },
+            success: function (data) {
+                if (data.success == true) {
+                    $(".agendamentoJQ").hide();
+                    $(".sucessoJQ").fadeIn("slide");
+                    $('#modalPopupConfirmacao').modal('hide');
                 }
             },
             error: function (data) {
