--- a/CMSv4/Areas/ModuloAdmin/Views/LogIntegracaoAdmin/Item.cshtml
+++ b/CMSv4/Areas/ModuloAdmin/Views/LogIntegracaoAdmin/Item.cshtml
@@ -30,7 +30,7 @@
             </div>
             <div class="form-group col-md-12">
                 <label>@TAdm("Json")</label>
-                <textarea class="form-control" style="height:600px">@Model.Json@Model.Imagem@Model.RetornoAPI</textarea> 
+                <textarea class="form-control" disabled style="height:600px">@Model.Json@Model.Imagem@Model.RetornoAPI</textarea> 
             </div>
             <div class="form-group col-md-12 text-right">
                 <a class="btn btn-white" href="@urlLista">@TAdm("Cancelar")</a>
