--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/Importar.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/Importar.cshtml
@@ -187,10 +187,10 @@
                     <span class="icon icon-chevron-right"></span>
                     @T("Agendar Containers")
                 </a>
-                <a href="javascript:void(0)" class="btn btn-red btn-lg btn-icon btnSalvarDtaJQ">
+                @*<a href="javascript:void(0)" class="btn btn-red btn-lg btn-icon btnSalvarDtaJQ">
                     <span class="icon icon-chevron-right"></span>
                     @T("Agendar Containers com DTA")
-                </a>
+                </a>*@
             </div>
         </div>
 
