--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptExportarCarga.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptExportarCarga.cshtml
@@ -211,9 +211,11 @@
                     $(".sucessoJQ").fadeIn("slide");
                     $('#modalPopupConfirmacao').modal('hide');
                 }
+                else {
+                    $(".mensagemModal").text("Houve um problema na sua solicitação, por favor tentar novamente mais tarde!");
+                }
             },
             error: function (data) {
-
             }
         });
     });
