--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptExportarCarga.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptExportarCarga.cshtml
@@ -220,7 +220,7 @@
         });
     });
 
-    $(".btnSimPopupConfirmacaoJQ").on("click", function () {
+    $(".btnSimPopupConfirmacaoJQ").on("click", function (e) {
         e.preventDefault();
         $('#modalPopupConfirmacao').modal('show');
 
