--- a/CMSv4/Areas/ModuloAdmin/Views/LogIntegracaoAdmin/Item.cshtml
+++ b/CMSv4/Areas/ModuloAdmin/Views/LogIntegracaoAdmin/Item.cshtml
@@ -13,8 +13,6 @@
             </h4>
         </div>
         <div class="portlet-widgets">
-            @if (Model.Codigo.HasValue)
-            {@Helpers.ButtonAuditoria(ViewBag.Funcionalidade, Model.Codigo)}
             <a class="btn btn-orange" href="@urlLista">@TAdm("Voltar")</a>
         </div>
     </div>
@@ -22,7 +20,7 @@
         <form method="post" class="form-vertical" role="form" id="form" enctype="multipart/form-data">
             <div class="form-group col-md-4">
                 <label>@TAdm("Data Cadastro")</label>
-                <input type="text" class="form-control" maxlength="50" value="@Model.DataCadastro.Value.ToString("dd/MM/yyyy HH:mm")" disabled>
+                <input type="text" class="form-control" maxlength="50" value="@Model.DataCadastro.Value.AddHours(3).ToString("dd/MM/yyyy HH:mm")" disabled>
             </div>
             <div class="form-group col-md-4">
                 <label>@TAdm("Tipo")</label>
@@ -34,7 +32,7 @@
             </div>
             <div class="form-group col-md-12">
                 <label>@TAdm("Json")</label>
-                <textarea class="form-control" disabled style="height:600px">@Model.Json@Model.Imagem@Model.RetornoAPI</textarea>
+                <textarea class="form-control" style="resize: none; height:600px" disabled>@Model.Json@Model.Imagem@Model.RetornoAPI</textarea>
             </div>
             <div class="form-group col-md-12 text-right">
                 <a class="btn btn-white" href="@urlLista">@TAdm("Cancelar")</a>
