--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptImportarDTA.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptImportarDTA.cshtml
@@ -147,7 +147,7 @@
         }
         else {
             $("#mensagem").html('');
-            $("#mensagem").html('<div class="alert alert-danger" role="alert">Os anexos de Declaração de Importação e BL são obrigatórios.</div>');
+            $("#mensagem").html('<div class="alert alert-danger" role="alert">Os anexos de DTA e BL são obrigatórios.</div>');
             $('html, body').animate({ scrollTop: 0 }, 800);
         }
     });
@@ -238,7 +238,7 @@
         }
         else {
             $("#mensagem").html('');
-            $("#mensagem").html('<div class="alert alert-danger" role="alert">Os anexos de Declaração de Importação e BL são obrigatórios.</div>');
+            $("#mensagem").html('<div class="alert alert-danger" role="alert">Os anexos de DTA e BL são obrigatórios.</div>');
             $('html, body').animate({ scrollTop: 0 }, 800);
         }
     });
