--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/PopupConfirmacao.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/PopupConfirmacao.cshtml
@@ -11,8 +11,8 @@
                 <strong class="mensagemModal">@T("Deseja realmente enviar a solicitação?")</strong>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-success btnSimPopupConfirmacaoJQ">@T("Sim")</button>
-                <button type="button" class="btn btn-delete btnNaoPopupConfirmacaoJQ" data-dismiss="modal">@T("Não")</button>
+                <a class="btn btn-success btnSimPopupConfirmacaoJQ">@T("Sim")</a>
+                <a  class="btn btn-delete btnNaoPopupConfirmacaoJQ" data-dismiss="modal">@T("Não")</a>
             </div>
         </div>
     </div>
