--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ExportarCarga.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ExportarCarga.cshtml
@@ -74,12 +74,12 @@
                 <thead>
                     <tr>
                         <td></td>
-                        <td>Sequência</td>
-                        <td>Equipamento</td>
-                        <td>Data Coleta</td>
-                        <td>Peso</td>
-                        <td>Comentário</td>
-                        <td></td>
+                        <td>@T("Sequência")</td>
+                        <td>@T("Equipamento")</td>
+                        <td>@T("Data Coleta")</td>
+                        <td>@T("Peso")</td>
+                        <td>@T("Comentário")</td>
+                    <td></td>
                     </tr>
                 </thead>
                 <tbody></tbody>
