--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ImportarSucesso.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ImportarSucesso.cshtml
@@ -1,10 +1,9 @@
 ﻿@model MLAgendamentoIntermodalImportacao
 
 <div class="box-agendamento box-agendamento--success sucessoJQ">
-    <h2 class="success-title">@T("Envio efetuado com sucesso!")</h2>
+    <h2 class="success-title">@T("Solicitação de agendamento efetuada com sucesso!")</h2>
     <p>
-        Quisque a eros quam. Pellentesque egestas finibus porttitor.<br>
-        Praesent fermentum lorem nec euismod euismod. Vivamus lacinia ex at arcu pulvinar, non tincidunt velit viverra.
+        @T("Gentileza notar que o envio da solicitação não garante a confirmação do agendamento. Nossa equipe de customer care analisará a solicitação e reverterá em breve")
     </p>
-    <a href="javascript:void(0)" class="btn btn-red btn-lg reloadJQ">@T("Fazer um novo Agendamento")</a>
+    <a href="/agendamento-imd/agendamento-imd" class="btn btn-red btn-lg reloadJQ">@T("Retorne à tela inicial")</a>
 </div>
