--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptExportarCarga.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptExportarCarga.cshtml
@@ -108,7 +108,7 @@
                             "<td>" + model.DataColetaFormatada + "</td>" +
                             "<td>" + model.Peso + " kgs" + "</td>" +
                             "<td><span class='icon icon-coments " + (model.Comentario == null ? 'disabled' : '') + "' data-toggle='tooltip' data-placement='top' title='" + (model.Comentario == null ? 'Sem comentários' : model.Comentario) + "'></span> <span title='" + (model.Comentario == null ? 'Sem comentários' : model.Comentario) + "'> " + (model.Comentario == null ? 'Sem comentários' : 'Comentários')+"</span></td>" +
-                            "<td><a href='#modalConfirmacao' data-toggle='modal'  onClick='excluirCarga(" + model.Codigo + ")' href='javascript:void(0)' class='icon icon-delete'><span class='sr-only'>Delete</span></a></td>" +
+                            "<td><a href='#modalConfirmacao' data-toggle='modal'  onClick='excluirCarga(" + model.Codigo + ")' class='icon icon-delete'><span class='sr-only'>Delete</span></a></td>" +
                         "</tr>";
 
         $(".table tbody").append(registro);
@@ -144,7 +144,7 @@
                     $("#CodigoExcluir").val('');
                     $(".divExclusao").fadeOut("slide");
                     $('.mensagemExclusao').fadeIn("slide");
-                    //$('#modalConfirmacao').modal('hide');
+                    $('#modalConfirmacao').modal('hide');
 
                     if ($("#divRegistrosCargas tr").length == 0) {
                         $(".btnAgendarJQ").hide();
@@ -178,6 +178,10 @@
 
     $(".btnAgendarJQ").on("click", function () {
         $('#modalPopupConfirmacao').modal('show');
+
+        // monta o HTML da popup
+        $(".gridJQ").html($("#divRegistrosCargas").html());
+        $(".gridJQ .icon-delete").remove();
     });
 
     $(".btnSimPopupConfirmacaoJQ").on("click", function (e) {
