--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptImportarCargaDTA.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptImportarCargaDTA.cshtml
@@ -345,6 +345,7 @@
         $("#divRegistrosCargas").fadeOut("slider");
 
         $(".mensagemExclusao").hide();
+        $("#btnExluirContainerNf").remove();
     }
 
     // CLICK NO BOTAO SALVAR EXPORTAÇAO
@@ -356,6 +357,13 @@
         if ($('#FormCarga input').hasClass('is-invalid') == false) {
             $(".btnSalvarCargaJQ").prop("disabled", true);
             event.preventDefault();
+
+            if ($("#valorNfe").val() == "R$ " || $("#valorNfe").val() == "R$ 0,00") {
+                $("#mensagem").html('');
+                $("#mensagem").html('<div class="alert alert-danger" role="alert">O Valor da NF-e está incorreto.</div>');
+                $('html, body').animate({ scrollTop: 0 }, 800);
+                return;
+            }
 
             if (isValido == true) {
                 $("#divContainerNf").addClass("loading");
@@ -933,7 +941,6 @@
         $(".btnAdicionarContainerJQ_" + maxAtivo.toString()).show();
     }
 
-
     $(".btnSalvarCargaVariosContainerJQ").on("click", function (event) {
         var isValido = $("#FormCargaNfVariosContainer").valid();
 
@@ -1088,6 +1095,10 @@
 
     $(".btnAgendarImportarJQ").on("click", function () {
         $('#modalPopupConfirmacao').modal('show');
+
+        // monta o HTML da popup
+        $(".gridJQ").html($("#divRegistrosImportarCargas").html());
+        $(".gridJQ .icon-delete").remove();
     });
 
     $(".btnSimPopupConfirmacaoJQ").on("click", function (e) {
