--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/PopupConfirmacao.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/PopupConfirmacao.cshtml
@@ -1,18 +1,19 @@
 ﻿<div class="modal modal-confirmacao fade" id="modalPopupConfirmacao" tabindex="-1" aria-labelledby="modalPopupConfirmacao" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-dialog modal-xl modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="modalConfirmacao"><strong>@T("Envio de solicitação")</strong></h5>
+                <h5 class="modal-title"><strong>@T("Agendar entrega")</strong></h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                <strong class="mensagemModal">@T("Deseja realmente enviar a solicitação?")</strong>
+                @T("Deseja confirmar o agendamento?")
+                <span class="gridJQ"></span>
             </div>
             <div class="modal-footer">
-                <a class="btn btn-success btnSimPopupConfirmacaoJQ">@T("Sim")</a>
-                <a  class="btn btn-delete btnNaoPopupConfirmacaoJQ" data-dismiss="modal">@T("Não")</a>
+                <a class="btn btn-cancel btnNaoPopupConfirmacaoJQ" data-dismiss="modal">@T("Voltar")</a>
+                <a class="btn btn-delete btnSimPopupConfirmacaoJQ">@T("Concluir")</a>
             </div>
         </div>
     </div>
